--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-﻿aiogram==2.25.1
+aiogram==2.25.1
 aiohttp==3.8.4
 aiosignal==1.3.1
 antlr4-python3-runtime==4.9.3
@@ -8,31 +8,30 @@ Babel==2.9.1
 certifi==2022.12.7
 cffi==1.15.1
 charset-normalizer==3.0.1
-click==8.1.3
-colorama==0.4.6
-comtypes==1.1.14
+ffmpeg==1.4
 frozenlist==1.3.3
 idna==3.4
 magic-filter==1.0.9
 multidict==6.0.4
-numpy==1.24.2
+numpy==1.24.1
+nvidia-cublas-cu11==11.10.3.66
+nvidia-cuda-nvrtc-cu11==11.7.99
+nvidia-cuda-runtime-cu11==11.7.99
+nvidia-cudnn-cu11==8.5.0.96
 omegaconf==2.3.0
 openai==0.27.0
 pycparser==2.21
-pypiwin32==223
-pyttsx3==2.90
+pydub==0.25.1
+PySoundFile==0.9.0.post1
 pytz==2022.7.1
 PyYAML==6.0
 requests==2.28.2
-silero==0.4.1
 six==1.16.0
-sounddevice==0.4.6
 soundfile==0.12.1
 SpeechRecognition==3.9.0
 torch==1.13.1
-torchaudio==0.13.1
-tqdm==4.64.1
+tqdm==4.65.0
 transliterate==1.10.2
-typing_extensions==4.5.0
+typing-extensions==4.5.0
 urllib3==1.26.14
 yarl==1.8.2
